Use privileged action to instantiate LiteExtensionTranslator. Replace remaining usages of long deprecated Class#newInstance() with getDeclaredConstructor().newInstance().